setup/manifests/tenant-1/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "tenant-1-peerauth"
  namespace: "tenant-1"
spec:
  mtls:
    mode: STRICT
